--- a/trello-project/src/main/resources/application-test.yml
+++ b/trello-project/src/main/resources/application-test.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
@@ -18,13 +18,3 @@ spring:
 redis:
   cluster:
     nodes: "${HOST_IP}:7001,${HOST_IP}:7002,${HOST_IP}:7003,${HOST_IP}:7004,${HOST_IP}:7005,${HOST_IP}:7006"
-#server:
-#  servlet:
-#    encoding:
-#      charset: utf-8
-#      force: true
-#jwt:
-#  secret:
-#    key: ${JWT_TOKEN}
-#admin:
-#  token: ${ADMINTOKEN}
