--- a/.github/workflows/pr-action.yml
+++ b/.github/workflows/pr-action.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'temurin'
 
       - name: chmod gradle
-        run: chmod +x gradlew
+        run: chmod +x ./trello-project/gradlew
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -31,7 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar #--info --stacktrace
+        run: ./trello-project/gradlew sonar --info --stacktrace
 
       - name: pull-request-test-success-slack-notice
         uses: 8398a7/action-slack@v3
