--- a/.github/workflows/pr-action.yml
+++ b/.github/workflows/pr-action.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'temurin'
 
       - name: chmod gradle
-        run: chmod +x ./trello-project/gradlew
+        run: chmod +x ${{ github.workspace }}/trello-project/gradlew
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
