--- a/.github/workflows/pr-action.yml
+++ b/.github/workflows/pr-action.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   test:
+    env:
+      working-directory: ${{ github.workspace }}/trello-project
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
@@ -18,7 +20,7 @@ jobs:
           distribution: 'temurin'
 
       - name: chmod gradle
-        run: chmod +x ${{ github.workspace }}/trello-project/gradlew
+        run: chmod +x gradlew
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -31,7 +33,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ${{ github.workspace }}/trello-project/gradlew sonar #--info --stacktrace
+        run: gradlew sonar #--info --stacktrace
 
       - name: pull-request-test-success-slack-notice
         uses: 8398a7/action-slack@v3
