--- a/.github/workflows/pr-action.yml
+++ b/.github/workflows/pr-action.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'temurin'
 
       - name: chmod gradle
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
         working-directory: ${{ github.workspace }}/trello-project
 
       - name: Cache SonarCloud packages
@@ -32,7 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: gradlew sonar #--info --stacktrace
+        run: ./gradlew sonar #--info --stacktrace
         working-directory: ${{ github.workspace }}/trello-project
 
       - name: pull-request-test-success-slack-notice
