--- a/.github/workflows/pr-action.yml
+++ b/.github/workflows/pr-action.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: chmod gradle
         run: chmod +x ./gradlew
-        working-directory: ${{ github.workspace }}/trello-project
+        working-directory: ./trello-project
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -27,13 +27,19 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-
+          
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: check
+          cache-read-only: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/dev' }}
+  
       - name: SonarCloud scan
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar #--info --stacktrace
-        working-directory: ${{ github.workspace }}/trello-project
+        run: ./gradlew sonar --info --stacktrace
+        working-directory: ./trello-project
 
       - name: pull-request-test-success-slack-notice
         uses: 8398a7/action-slack@v3
