--- a/.github/workflows/pr-action.yml
+++ b/.github/workflows/pr-action.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
+    defaults:
+      run:
+        working-directory: ./trello-project
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 17
@@ -18,8 +21,7 @@ jobs:
           distribution: 'temurin'
 
       - name: chmod gradle
-        run: chmod +x ./gradlew
-        working-directory: ./trello-project
+        run: chmod +x gradlew
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -39,7 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew sonar --info --stacktrace
-        working-directory: ./trello-project
 
       - name: pull-request-test-success-slack-notice
         uses: 8398a7/action-slack@v3
