--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -17,4 +17,4 @@ spring:
         use_sql_comments: true
 redis:
   cluster:
-    nodes: "${HOST_IP}:7001,${HOST_IP}:7002,${HOST_IP}:7003,${HOST_IP}:7004,${HOST_IP}:7005,${HOST_IP}:7006"
+    nodes: 127.0.0.1:6379
