--- a/.github/workflows/pr-action.yml
+++ b/.github/workflows/pr-action.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew test sonar --info --stacktrace
+        run: ./gradlew sonar --info --stacktrace
 
 #      - name: pull-request-test-success-slack-notice
 #        uses: 8398a7/action-slack@v3
