--- a/build.gradle
+++ b/build.gradle
@@ -86,7 +86,8 @@ sonar {
         property "sonar.projectKey", "Nameless1004_testrepo"
         property "sonar.organization", "nameless1004"
         property "sonar.host.url", "https://sonarcloud.io"
-        property 'sonar.sources', 'src'
+        property "sonar.sources", "src/main/java"
+        property "sonar.tests", "src/test/java"
         property 'sonar.language', 'java'
         property 'sonar.sourceEncoding', 'UTF-8'
         property 'sonar.test.exclusions', jacocoExcludePatterns.join(',')
