--- a/.github/workflows/pr-action.yml
+++ b/.github/workflows/pr-action.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar --info --stacktrace
+        run: ./gradlew build test sonar --info --stacktrace
 
 #      - name: pull-request-test-success-slack-notice
 #        uses: 8398a7/action-slack@v3
